--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -281,6 +281,7 @@ ul#nav li.current a { color: #F06000; }
    margin-top: 6px;
 }
 
+#white-space: pre-line
 /*----------------------------------------------*/
 /*	Skill Bars
 /*----------------------------------------------*/
@@ -340,7 +341,7 @@ ul#nav li.current a { color: #F06000; }
   	-moz-animation: wordpress 2s ease;
   	-webkit-animation: wordpress 2s ease;
 }
-.javascript {
+.java {
    width: 80%;
    -moz-animation: wordpress 2s ease;
    -webkit-animation: wordpress 2s ease;
