--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -257,6 +257,10 @@ ul#nav li.current a { color: #F06000; }
 #resume h3 {
    font: 25px/30px 'opensans-bold', sans-serif;
 }
+#resume h4 {
+   font: 25px/30px 'opensans-bold', sans-serif;
+   text-align: center
+}
 
 #resume .header-col { padding-top: 9px; }
 #resume .main-col { padding-right: 10%; }
